--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "16.0.3",
+    "prettier": "^3.7.4",
     "react": "19.2.0",
     "react-aria-components": "^1.14.0",
     "react-dom": "19.2.0",
