--- a/pipeline.yml
+++ b/pipeline.yml
@@ -11,6 +11,10 @@ artifacts:
   - 'imageRef.properties'
   - 'pipeline.properties'
 
+custom:  
+  post_build_commands:
+    - "tar -czf scorepal-ui-svc-$BRANCH_NAME.archive.tar.gz out/"
+
 spinnaker_app: scorepal-ui-svc
 
 environments:
